--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -84,7 +84,9 @@ urlcolor=black
 
 \author{R\u{a}zvan V. Marinescu\inst{1} \and Marco Lorenzi\inst{1,4} \and Stefano Blumberg\inst{1} \and 
  Alexandra L. Young\inst{1} \and Pere P. Morell\inst{1} \and Neil P. Oxtoby\inst{1} \and Arman Eshaghi\inst{1,2} \and Keir X. Yong\inst{3} \and Sebastian J. Crutch\inst{3} \and Daniel C. Alexander\inst{1}, for 
-the  Alzheimer’s  Disease  Neuroimaging Initiative\thanks{Data used in preparation of this article were obtained from the Alzheimer's Disease Neuroimaging Initiative (ADNI) database (adni.loni.usc.edu). As such, the investigators within the ADNI contributed to the design and implementation of ADNI and/or provided data but did not participate in analysis or writing of this report. A complete listing of ADNI investigators can be found at: http://adni.loni.usc.edu/wp-content/uploads/how\_to\_apply/ADNI\_Acknowledgement\_List.pdf}}
+the  Alzheimer’s  Disease  Neuroimaging Initiative
+% \thanks{Data used in preparation of this article were obtained from the Alzheimer's Disease Neuroimaging Initiative (ADNI) database (adni.loni.usc.edu). As such, the investigators within the ADNI contributed to the design and implementation of ADNI and/or provided data but did not participate in analysis or writing of this report. A complete listing of ADNI investigators can be found at: http://adni.loni.usc.edu/wp-content/uploads/how\_to\_apply/ADNI\_Acknowledgement\_List.pdf}
+}
 
 \authorrunning{R\u{a}zvan V. Marinescu et al.} % abbreviated author list (for running head)
 
@@ -173,6 +175,8 @@ We extend the above model to multiple subjects, visits and biomarkers to get the
 \end{equation}
 where $\boldsymbol{y} = [y_{ijk} | \forall (i,j,k) \in \Omega ]$ is the vector of all biomarker measurements, while $\boldsymbol{\theta} = [\theta_1, ..., \theta_K]$ represents the stacked parameters for the trajectories of biomarkers in agnostic units, $\boldsymbol{\lambda} = [\lambda_d^{l}|l \in \Lambda, d \in \mathbb{D}]$ are the parameters of the dysfunction trajectories within the disease models, $\boldsymbol{\beta} =[\beta_1, ..., \beta_N]$ are the subject-specific time shifts and $\boldsymbol{\epsilon} = [\epsilon_k | k \in K]$  estimates biomarker measurement noise. Here we assumed independence across different subjects, but the biomarker measurements and visits are linked through the latent time-shift $\beta_i$ for each subject. The parameters of the model that need to be estimated are $[\boldsymbol{\theta}, \boldsymbol{\lambda}, \boldsymbol{\beta}, \boldsymbol{\epsilon}]$.
 
+We estimate the model parameters using a two-stage approach. In the first stage, we perform belief propagation within each agnostic unit and then within each disease model. In the second stage we jointly optimise across all agnostic units and disease models using loopy belief propagation.
+
 %The sigmoidal model for $f$ is defined as:
 %
 %\begin{equation}
@@ -181,42 +185,42 @@ where $\boldsymbol{y} = [y_{ijk} | \forall (i,j,k) \in \Omega ]$ is the vector o
 %where $s$ is the disease progression score of a subject and $\theta_k = [a_k, b_k, c_k, d_k]$ are parameters controlling the shape of the trajectory for biomarker $k$: $d_k$ and $d_k + a_k$ represent the lower and upper limits of the sigmoidal function, $c_k$ represents the inflection point and $a_k b_k/4$ represents the slope at the inflection point. A similar model is used also for $g$.
 
 
-\subsection{Parameter Estimation}
-
-\newcommand{\uu}{^{(u)}}
-\newcommand{\um}{^{(u-1)}}
-
-We estimate the model parameters using a two-stage approach. In the first stage, we perform belief propagation within each agnostic unit and then within each disease model. In the second stage we jointly optimise across all agnostic units and disease models using loopy belief propagation. An overview of the algorithm is given in Figure \ref{fig:dktAlgo}. Given the initial parameters estimated from the first stage (line 1), the algorithm continuously updates the biomarker trajectories within the agnostic units (lines 4-5), dysfunction trajectories (line 8) and subject-specific time shifts (line 10) until convergence. The cost function for all parameters is nearly identical, the main difference being the measurements $(i,j,k)$ over subjects $i$, visits $j$ and biomarkers $k$ that are selected for computing the measurement error. For estimating the trajectory of biomarker $k$ within agnostic unit $\psi(k)$, measurements are taken from $\Omega_k$ representing all measurements of biomarker $k$ from all subjects and visits. For estimating the dysfunction trajectories, $\Omega_{d,l}$ represents the measurement indices from all subjects with disease $d$ (i.e. $d_i = d$) and all biomarkers $k$ that belong to agnostic unit $l$ (i.e. $\psi(k) = l$). Finally, $\Omega_i$ (line 10) represents all measurements from subject $i$, for all biomarkers and visits. 
-
-
-\begin{figure}
-\begin{algorithm}[H]
-\tiny
- Initialise $\boldsymbol{\theta}^{(0)}$, $\boldsymbol{\lambda}^{(0)}$, $\boldsymbol{\beta}^{(0)}$\\
-  \While{$\boldsymbol{\theta}$, $\boldsymbol{\lambda}$, $\boldsymbol{\beta}$ not converged}{
-   \tcp*[l]{Estimate biomarker trajectories (disease agnostic)}
-    \For{$k=1$ to $K$}{
-      ${\theta_k\uu = \argmin_{\theta_k} \sum_{(i,j) \in \Omega_k} \left[y_{ijk} - g\left(f(\beta_i\um + m_{ij}; \lpum) ; \theta_k\right) \right]^2  - log\ p(\theta_k)}$\\
-      ${\epsilon_k\uu = \frac{1}{|\Omega_k|} \sum_{(i,j) \in \Omega_k}    \left[y_{ijk} - g\left(f(\beta_i\um + m_{ij}; \lpum) ; \theta_k\uu \right) \right]^2 }$\\
-    }
-     \tcp*[l]{Estimate dysfunction trajectories (disease specific)} 
-    \For{$d=1 \in \mathbb{D}$}{
-      \For{$l=1 \in \Lambda$}{
-        ${\lambda_{d}^{l, (u)} = \argmin_{\lambda_{d}^{l}} \sum_{(i,j,k) \in \Omega_{d,l}} \left[y_{ijk} - g\left(f(\beta_i\um + m_{ij}; \lambda_{d}^{l}) ; \theta_k\uu 
-        \right) \right]^2  - log\ p(\lambda_{d}^{l})}$\\
-      }
-    }
-    \tcp*[l]{Estimate subject-specific time shifts} 
-    \For{$i=1 \in [1, \dots, S]$}{
-      ${\beta_i\uu = \argmin_{\beta_i} \sum_{(j,k) \in \Omega_i} \left[y_{ijk} - g\left(f(\beta_i + m_{ij}; \lpuu) ; \theta_k\uu
-      \right) \right]^2  - log\ p(\beta_i)}$\\
-    }
-}
-\normalfont
-\end{algorithm}
-\caption[The algorithm for estimating the DKT parameters]{The algorithm used to estimate the DKT parameters, based on loopy belief-propagation.}
-\label{fig:dktAlgo}
-\end{figure}
+% \subsection{Parameter Estimation}
+% 
+% \newcommand{\uu}{^{(u)}}
+% \newcommand{\um}{^{(u-1)}}
+% 
+% We estimate the model parameters using a two-stage approach. In the first stage, we perform belief propagation within each agnostic unit and then within each disease model. In the second stage we jointly optimise across all agnostic units and disease models using loopy belief propagation. An overview of the algorithm is given in Figure \ref{fig:dktAlgo}. Given the initial parameters estimated from the first stage (line 1), the algorithm continuously updates the biomarker trajectories within the agnostic units (lines 4-5), dysfunction trajectories (line 8) and subject-specific time shifts (line 10) until convergence. The cost function for all parameters is nearly identical, the main difference being the measurements $(i,j,k)$ over subjects $i$, visits $j$ and biomarkers $k$ that are selected for computing the measurement error. For estimating the trajectory of biomarker $k$ within agnostic unit $\psi(k)$, measurements are taken from $\Omega_k$ representing all measurements of biomarker $k$ from all subjects and visits. For estimating the dysfunction trajectories, $\Omega_{d,l}$ represents the measurement indices from all subjects with disease $d$ (i.e. $d_i = d$) and all biomarkers $k$ that belong to agnostic unit $l$ (i.e. $\psi(k) = l$). Finally, $\Omega_i$ (line 10) represents all measurements from subject $i$, for all biomarkers and visits. 
+% 
+% 
+% \begin{figure}
+% \begin{algorithm}[H]
+% \tiny
+%  Initialise $\boldsymbol{\theta}^{(0)}$, $\boldsymbol{\lambda}^{(0)}$, $\boldsymbol{\beta}^{(0)}$\\
+%   \While{$\boldsymbol{\theta}$, $\boldsymbol{\lambda}$, $\boldsymbol{\beta}$ not converged}{
+%    \tcp*[l]{Estimate biomarker trajectories (disease agnostic)}
+%     \For{$k=1$ to $K$}{
+%       ${\theta_k\uu = \argmin_{\theta_k} \sum_{(i,j) \in \Omega_k} \left[y_{ijk} - g\left(f(\beta_i\um + m_{ij}; \lpum) ; \theta_k\right) \right]^2  - log\ p(\theta_k)}$\\
+%       ${\epsilon_k\uu = \frac{1}{|\Omega_k|} \sum_{(i,j) \in \Omega_k}    \left[y_{ijk} - g\left(f(\beta_i\um + m_{ij}; \lpum) ; \theta_k\uu \right) \right]^2 }$\\
+%     }
+%      \tcp*[l]{Estimate dysfunction trajectories (disease specific)} 
+%     \For{$d=1 \in \mathbb{D}$}{
+%       \For{$l=1 \in \Lambda$}{
+%         ${\lambda_{d}^{l, (u)} = \argmin_{\lambda_{d}^{l}} \sum_{(i,j,k) \in \Omega_{d,l}} \left[y_{ijk} - g\left(f(\beta_i\um + m_{ij}; \lambda_{d}^{l}) ; \theta_k\uu 
+%         \right) \right]^2  - log\ p(\lambda_{d}^{l})}$\\
+%       }
+%     }
+%     \tcp*[l]{Estimate subject-specific time shifts} 
+%     \For{$i=1 \in [1, \dots, S]$}{
+%       ${\beta_i\uu = \argmin_{\beta_i} \sum_{(j,k) \in \Omega_i} \left[y_{ijk} - g\left(f(\beta_i + m_{ij}; \lpuu) ; \theta_k\uu
+%       \right) \right]^2  - log\ p(\beta_i)}$\\
+%     }
+% }
+% \normalfont
+% \end{algorithm}
+% \caption[The algorithm for estimating the DKT parameters]{The algorithm used to estimate the DKT parameters, based on loopy belief-propagation.}
+% \label{fig:dktAlgo}
+% \end{figure}
 
 
 
@@ -226,7 +230,7 @@ We estimate the model parameters using a two-stage approach. In the first stage,
 We first test DKT on synthetic data, to assess its performance when ground truth is known. More precisely, we generate data that follows the DKT model exactly, and test DKT's ability to recover biomarker trajectories and subject time-shifts. We generate synthetic data from two diseases (i.e. \emph{synthetic PCA} and \emph{synthetic AD}) using parameters from Table \ref{tab:synParams}, emulating the TADPOLE and DRC cohorts. The six biomarkers ($k_1$-$k_6$) have been \emph{a-priori} allocated to two agnostic units $l_0$ and $l_1$. To simulate the lack of multimodal data in the synthetic PCA subjects, we discarded the data from biomarkers $k_0$, $k_1$, $k_4$ and $k_5$ for all these subjects. Remaining biomarkers $k_2$ and $k_3$, for which data was still available in the synthetic PCA cohort, are assumed to be of the same modality (e.g. MRI volume) but to represent measurements from different brain regions (e.g. temporal and occipital). 
  
  \begin{table}
- %\fontsize{7}{12}
+\fontsize{6}{8}\selectfont
  \centering
  \begin{tabular}{c | c}
 & \textbf{Trajectory parameters} \\
@@ -252,7 +256,7 @@ Agnostic unit $l_1$ & $\theta_1 = (1,10,0.2,0)$, $\theta_3 = (1,10,0.55,0)$, $\t
 
 \subsection{Data Acquisition and Preprocessing}
 
-We trained DKT on ADNI data from the TADPOLE challenge \cite{marinescu2018tadpole}, since it contained a large number of multimodal biomarkers already pre-processed and aggregated into one table. From the TADPOLE dataset we selected a subset of 230 subjects which had at least one FDG PET, AV45, AV1451 or DTI scan. Most subjects also had MRI scans and cognitive tests. In order to model another disease, we further included 76 PCA subjects from the DRC centre in the training set, along with 67 tAD and 87 age-matched controls, all of which only had MRI scans.
+We trained DKT on ADNI data from the TADPOLE challenge \cite{marinescu2018tadpole}, since it contained a large number of multimodal biomarkers already pre-processed and aggregated into one table. From the TADPOLE dataset we selected a subset of 230 subjects which had at least one FDG PET, AV45, AV1451 or DTI scan. Most subjects also had MRI scans and cognitive tests. In order to model another disease, we further included 76 PCA subjects from the DRC centre in the training set, along with 67 tAD and 87 age- matched controls, all of which only had MRI scans. 
  
 For both datasets, we computed multimodal biomarker measurements corresponding to each brain lobe: MRI volumes using the Freesurfer software, FDG-, AV45- and AV1451-PET standardised uptake value ratios (SUVR) extracted with the standard ADNI pipeline, and DTI fractional anisotropy (FA) measures from white-matter regions adjacent to each lobe. For every lobe, we regressed out the following covariates: age, gender, total intracranial volume (TIV) and dataset (ADNI vs DRC). Finally, we normalised the biomarker values to lie within the [0,1] range. For each lobe, we allocated all multimodal biomarkers corresponding to that lobe to its own agnostic unit.
 
@@ -353,8 +357,11 @@ The results from Table \ref{sec:dktPerfMetrics} indicate that the DKT prediction
 
 \newcommand{\cw}{c}
 
+
+
 \begin{table}
-\footnotesize
+\centering
+\fontsize{8}{10}\selectfont
 \begin{tabular}{c | c c c c c c}
 \textbf{Model} & \textbf{Cingulate} & \textbf{Frontal} & \textbf{Hippo.} & \textbf{Occip.} & \textbf{Parietal} & \textbf{Temporal}\\
 & \multicolumn{6}{c}{\textbf{Prediction Error (MSE)}}\\
@@ -366,25 +373,28 @@ DKT  & 0.76  & 0.48  & 0.76  & 0.55  & 0.55  & 0.33 \\
 Latent stage & 0.76  & 0.49  & 0.80*  & 0.56  & 0.51*  & 0.33 \\
 Linear & 0.48*  & 0.31*  & 0.64*  & 0.61*  & 0.57*  & 0.27* \\
 \end{tabular}
-\normalfont
+% \normalfont
 \caption[Performance evaluation of DKT and two simpler models]{Performance evaluation of DKT and two simpler models. (*) Statistically significant difference between the current model performance and DKT, based on a two-tailed t-test, Bonferroni corrected.}
+% \end{footnotesize}
 \label{sec:dktPerfMetrics}
 \end{table}
+
+
 
 \section{Discussion}
 \label{sec:dktDis}
 
 We presented DKT, a framework that enables, for the first time, joint modelling of biomarker progressions in multiple neurodegenerative diseases simultaneously. The framework allows the inference of biomarker trajectories in rare diseases, for which there is not enough data to allow estimation of such trajectories, and accounts for a different spatial distribution of pathology between distinct phenotypes. Our approach is also interpretable, enabling us to understand complex mechanisms underpinning these diseases.
 
-While we provided an example implementation of DKT using specific models of the biomarker trajectories, measurement noise and link function (the disease progression score), DKT should be considered as a general framework for joint modelling of biomarker trajectories within different diseases simultaneously. The actual implementation of DKT can thus be extended to use non-parametric trajectories, or more complex link functions that estimate not only subject time-shifts but also progression speed or higher order terms.
-
-While here we have focused on Alzheimer's variants such as tAD and PCA, DKT can also be applied to other progressive neurodegenerative diseases of non-Alzheimer's type and even the normal ageing process. While we only used imaging data, cognitive tests can also be included in the disease-specific sub-models of DKT, or even allocated in the agnostic units of the regions that are responsible for those tasks.
+% While we provided an example implementation of DKT using specific models of the biomarker trajectories, measurement noise and link function (the disease progression score), DKT should be considered as a general framework for joint modelling of biomarker trajectories within different diseases simultaneously. The actual implementation of DKT can thus be extended to use non-parametric trajectories, or more complex link functions that estimate not only subject time-shifts but also progression speed or higher order terms.
+% 
+% While here we have focused on Alzheimer's variants such as tAD and PCA, DKT can also be applied to other progressive neurodegenerative diseases of non-Alzheimer's type and even the normal ageing process. While we only used imaging data, cognitive tests can also be included in the disease-specific sub-models of DKT, or even allocated in the agnostic units of the regions that are responsible for those tasks.
 
 Our work has several limitations: 1) DKT assumes all subjects within a disease follow the same trajectory, without considering heterogeneity within the disease population, 2) the allocation of biomarkers into agnostic units has to be done using \emph{a-priori} human knowledge, 3) DKT currently works only on extracted brain features, discarding important information present in the brain morphometry, 4) for validation, the synthetic experiment we ran was limited to only one setting of parameters mimicking the datasets from TADPOLE and the DRC centre and 5) the validation on patient data was also done only on a small set of 20 DTI scans, due to lack of multimodal data in PCA.
 
 There are several potential avenues for further research: 1) to account for heterogeneity, DKT can be easily extended to include subject-specific effects; 2) improved schemes for biomarker allocation to agnostic units can take connectivity into account, or derive it from the data automatically; 3) to account for brain morphometry and connectivity, DKT can be extended into a fully spatio-temporal model, by estimating continuous changes in volumetric brain images -- in this case, each voxel can have an associated dysfunction score that is derived from measurements of various modalities from that voxel; 4-5) DKT can be further validated on more complex synthetic experiments with a range of parameter settings, as well as on patient data from ADNI, where the population could be \emph{a-priori} split into sub-groups with different progressions.
 
-As a key direction of further research, DKT can be used to understand novel mechanisms within a disease (e.g. AD variants), as well as across diseases (e.g. AD vs FTD). For AD variants in particular, one can study whether early biomarkers such as amyloid and tau have different dynamics compared to typical AD, and what these differences are. This can be done by choosing different a-priori allocations of biomarkers to agnostic units -- e.g. allocating amyloid and tau into one a shared agnostic unit, or otherwise directly to the disease specific models, thus making them dependent on the disease. The model with the best data fit or predictive power will indicate the most likely mechanism. 
+% As a key direction of further research, DKT can be used to understand novel mechanisms within a disease (e.g. AD variants), as well as across diseases (e.g. AD vs FTD). For AD variants in particular, one can study whether early biomarkers such as amyloid and tau have different dynamics compared to typical AD, and what these differences are. This can be done by choosing different a-priori allocations of biomarkers to agnostic units -- e.g. allocating amyloid and tau into one a shared agnostic unit, or otherwise directly to the disease specific models, thus making them dependent on the disease. The model with the best data fit or predictive power will indicate the most likely mechanism. 
 
 %
 % ---- Bibliography ---- 
